misc: begin blog post layout

--- a/pages/posts/2022/02/test-post.mdx
+++ b/pages/posts/2022/02/test-post.mdx
@@ -1,8 +1,30 @@
-export const metadata = {
+import { BlogPost } from 'components/blog';
+
+export const meta = {
 	title: 'Test Post',
 	date: '2022-02-04',
 };
 
-# Test Post
+# h1
 
-This is a test post!
+## h2
+
+### h3
+
+#### h4
+
+paragraph
+
+_italic_
+**bold**
+**_italic and bold_**
+
+[link](https://igalaxy.dev)
+
+`inline code`
+
+```ts
+blockCode();
+```
+
+export default ({ children }) => <BlogPost meta={meta}>{children}</BlogPost>;
