feat: github-flavored md support

--- a/posts/2022/02/test-post/test-post.mdx
+++ b/posts/2022/02/test-post/test-post.mdx
@@ -22,3 +22,29 @@ _italic_ \
 ```ts
 blockCode();
 ```
+
+# GFM
+
+## Autolink literals
+
+www.example.com, https://example.com, and contact@example.com.
+
+## Footnote
+
+A note[^1]
+
+[^1]: Big note.
+
+## Strikethrough
+
+~one~ or ~~two~~ tildes.
+
+## Table
+
+| a   | b   |   c |  d  |
+| --- | :-- | --: | :-: |
+
+## Tasklist
+
+- [ ] to do
+- [x] done
